[project]
name = "ecommerce-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "google-auth-oauthlib>=1.3.0",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
]
